; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_vid_pollux.c_vid_pollux_finish.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_vid_pollux.c_vid_pollux_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gp2x_screens = common dso_local global i32* null, align 8
@FB_MEM_SIZE = common dso_local global i32 0, align 4
@fbdev = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vid_pollux_finish() #0 {
  %1 = load i32*, i32** @gp2x_screens, align 8
  %2 = getelementptr inbounds i32, i32* %1, i64 0
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @FB_MEM_SIZE, align 4
  %5 = call i32 @memset(i32 %3, i32 0, i32 %4)
  %6 = load i32*, i32** @gp2x_screens, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @FB_MEM_SIZE, align 4
  %10 = call i32 @munmap(i32 %8, i32 %9)
  %11 = load i32, i32* @fbdev, align 4
  %12 = call i32 @close(i32 %11)
  store i32 -1, i32* @fbdev, align 4
  ret void
}

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @munmap(i32, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
